# editor

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
assets/images/: logo.icns
src/: application.cpp  application.h  application.rs  event.rs  highlight.cpp  highlight.h  list_view.cpp  list_view.h  main.c  main.cpp  main.rs  rect_shader.wgsl  renderer.rs  search.cpp  search.h  shader.wgsl  text_input.cpp  text_input.h  text_view.cpp  text_view.h  text_view.rs
