[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.17.1"
winit = "0.28.7"
pollster = "0.3.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
glyph_brush = "0.7.8"
glyph_brush_layout = "0.2.3"
wgpu_glyph = "0.21.0"